Proposed solution for Closing # 53
Including the array subscript in the instance name

--- a/src/peakrdl_python/templates/addrmap.py.jinja
+++ b/src/peakrdl_python/templates/addrmap.py.jinja
@@ -30,7 +30,7 @@ from ..lib import CallbackSet
                                        {{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,
                                                                    address=self.address+{{node.raw_address_offset}}+({{node_instance_index}} * {{node.array_stride}}),
                                                                    logger_handle=logger_handle+'.{{node.inst_name}}[{{node_instance_index}}]',
-                                                                                   inst_name='{{node.inst_name}}')
+                                                                                   inst_name='{{node.inst_name}}[{{node_instance_index}}]')
                                        {%- if not loop.last -%} ,  {%- endif -%}
                                        {% endfor %} )
             {%- elif node.is_sw_readable and not node.is_sw_writable %}
@@ -38,7 +38,7 @@ from ..lib import CallbackSet
                                        {{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,
                                                                    address=self.address+{{node.raw_address_offset}}+({{node_instance_index}} * {{node.array_stride}}),
                                                                    logger_handle=logger_handle+'.{{node.inst_name}}[{{node_instance_index}}]',
-                                                                                   inst_name='{{node.inst_name}}')
+                                                                                   inst_name='{{node.inst_name}}[{{node_instance_index}}]')
                                        {%- if not loop.last -%} ,  {%- endif -%}
                                        {% endfor %} )
             {%- elif not node.is_sw_readable and node.is_sw_writable %}
@@ -46,7 +46,7 @@ from ..lib import CallbackSet
                                        {{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,
                                                                    address=self.address+{{node.raw_address_offset}}+({{node_instance_index}} * {{node.array_stride}}),
                                                                    logger_handle=logger_handle+'.{{node.inst_name}}[{{node_instance_index}}]',
-                                                                                   inst_name='{{node.inst_name}}')
+                                                                                   inst_name='{{node.inst_name}}[{{node_instance_index}}]')
                                        {%- if not loop.last -%} ,  {%- endif -%}
                                        {% endfor %} )
             {%- endif %}
@@ -74,7 +74,7 @@ from ..lib import CallbackSet
                                        {{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,
                                                                                    address=self.address+{{node.raw_address_offset}}+({{node_instance_index}} * {{node.array_stride}}),
                                                                                    logger_handle=logger_handle+'.{{node.inst_name}}[{{node_instance_index}}]',
-                                                                                   inst_name='{{node.inst_name}}')
+                                                                                   inst_name='{{node.inst_name}}[{{node_instance_index}}]')
                                        {%- if not loop.last -%} ,  {%- endif -%}
                                        {% endfor %} )
         {%- else -%}
