--- a/src/peakrdl_python/templates/addrmap_register.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_register.py.jinja
@@ -65,7 +65,7 @@ class {{get_fully_qualified_type_name(node)}}_cls(RegWriteOnly):
         return return_dict
 
     @property
-    def readable_fields(self) -> Iterable[Field]:
+    def readable_fields(self) -> Iterator[Field]:
         """
         generator that produces has all the readable fields within the register
         """
@@ -77,7 +77,7 @@ class {{get_fully_qualified_type_name(node)}}_cls(RegWriteOnly):
 
     {% if node.has_sw_writable %}
     @property
-    def writable_fields(self) -> Iterable[Field]:
+    def writable_fields(self) -> Iterator[Field]:
         """
         generator that produces has all the writable fields within the register
         """
