--- a/src/peakrdl_python/templates/addrmap_memory.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_memory.py.jinja
@@ -1,6 +1,7 @@
 
 {% from 'reg_definitions.py.jinja' import register_class_attributes with context %}
-{% from 'reg_definitions.py.jinja' import child_register_getter with context %}
+{% from 'reg_definitions.py.jinja' import child_writable_register_getter with context %}
+{% from 'reg_definitions.py.jinja' import child_readable_register_getter with context %}
 
 {%- macro memory_class(node) %}
     {%- if node.is_sw_readable and node.is_sw_writable %}
@@ -46,6 +47,12 @@ class {{get_fully_qualified_type_name(node)}}_cls(MemoryWriteOnly):
             {%- endif %}
         {% endfor %}
 
-    {{ child_register_getter(node) }}
+    {% if node.is_sw_readable %}
+    {{ child_readable_register_getter(node) }}
+    {% endif %}
+
+    {% if node.is_sw_writable %}
+    {{ child_writable_register_getter(node) }}
+    {% endif %}
 
 {%- endmacro %}
