--- a/src/peakrdl_python/templates/addrmap.py.jinja
+++ b/src/peakrdl_python/templates/addrmap.py.jinja
@@ -14,6 +14,7 @@ from ..lib import AddressMap, RegFile, Memory
 from ..lib import RegReadOnly, RegWriteOnly, RegReadWrite
 from ..lib import FieldReadOnly, FieldWriteOnly, FieldReadWrite
 from ..lib import FieldSizeProps, FieldMiscProps, Field
+from ..lib import ReadableRegister, WritableRegister
 from ..lib import CallbackSet
 {% if uses_memory %}from ..lib import MemoryReadOnly, MemoryWriteOnly, MemoryReadWrite {% endif %}
 
